[gd_scene load_steps=6 format=3 uid="uid://cc6gxrptg61ka"]

[ext_resource type="Script" uid="uid://17ujygu7dahb" path="res://scripts/button.gd" id="1_ywcaw"]
[ext_resource type="Texture2D" uid="uid://ds7d5lyencg44" path="res://assets/button_unpressed_placeholder.png" id="2_sejoc"]
[ext_resource type="Texture2D" uid="uid://b3bcirydhb6n" path="res://assets/button_pressed_placeholder.png" id="3_u5roi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwq14"]
size = Vector2(57, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_6c3e8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sejoc")
}, {
"duration": 1.0,
"texture": ExtResource("3_u5roi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Button" type="Area2D"]
script = ExtResource("1_ywcaw")

[node name="ButtonCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_uwq14")

[node name="ButtonAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6c3e8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
